# dlopen-rs

./: Cargo.toml  LICENSE  README-zh_cn.md  README.md  check.sh
.github/workflows/: rust.yml
benches/: dl_iterate_phdr.rs  dlopen.rs  dlopen_llvm.rs  dlsym.rs  my_benchmark.rs
cdylib/: Cargo.toml
cdylib/src/: lib.rs
ci/: run.sh
dlopen-rs/: Cargo.toml
dlopen-rs/examples/: from_binary.rs  load_self.rs  relocate_with.rs  unwinding.rs
dlopen-rs/src/: builtin.rs  dynamic.rs  ehdr.rs  file.rs  handle.rs  hash.rs  hashtable.rs  lib.rs  load_self.rs  loader.rs  main.rs  relocation.rs  segment.rs  tls.rs  types.rs  unwind.rs
dlopen-rs/src/arch/: aarch64.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
dlopen-rs/src/dso/: mod.rs
dlopen-rs/src/dso/binary/: mmap.rs  mod.rs  no_mmap.rs
dlopen-rs/src/dso/file/: mmap.rs  mod.rs  no_mmap.rs
dlopen-rs/src/loader/: builtin.rs  mod.rs  relocation.rs
dlopen-rs/src/loader/arch/: aarch64.rs  mod.rs  riscv64.rs  x86.rs  x86_64.rs
dlopen-rs/src/loader/dso/: dynamic.rs  ehdr.rs  load_self.rs  mod.rs  tls.rs
dlopen-rs/src/loader/dso/binary/: mmap.rs  no_mmap.rs
dlopen-rs/src/loader/dso/ehframe/: dummy.rs  libgcc.rs  libunwind.rs  unwinding.rs
dlopen-rs/src/loader/dso/file/: mmap.rs
dlopen-rs/src/loader/dso/segment/: mod.rs
dlopen-rs/src/segment/: mmap.rs  mod.rs  no_mmap.rs
dlopen-rs/src/unwind/: dummy.rs  libgcc.rs  libunwind.rs  mod.rs  unwinding.rs
example/: Cargo.toml
example-dylib/: Cargo.toml
example-dylib/src/: lib.rs
example/src/: main.rs
examples/: dlopen.rs  from_binary.rs  from_file.rs  load_self.rs  manaul.rs  mmap_impl.rs  preload.rs  relocate_with.rs  relocate_with_func.rs  unwinding.rs
scripts/: reload_sos_on_r_brk.py
src/: abi.rs  builtin.rs  debug.rs  dl_iterate_phdr.rs  dladdr.rs  dlopen.rs  dlsym.rs  dynamic.rs  file.rs  gnuhash.rs  init.rs  ldso.rs  lib.rs  loader.rs  register.rs  relocation.rs  types.rs
src/loader/: binary.rs  builtin.rs  debug.rs  dynamic.rs  file.rs  ldso.rs  mod.rs  relocation.rs  segment.rs  symbol.rs  tls.rs  types.rs  version.rs
src/loader/arch/: aarch64.rs  riscv64.rs  x86.rs  x86_64.rs
src/loader/dso/: binary.rs  dynamic.rs  file.rs  hash_table.rs  hashtab.rs  hashtable.rs  mod.rs  segment.rs  string_table.rs  strtab.rs  tls.rs  version.rs
src/loader/dso/binary/: mod.rs
src/loader/dso/ehframe/: dummy.rs  libgcc.rs  libunwind.rs  mod.rs  unwinding.rs
src/loader/dso/file/: mmap.rs  mod.rs  no_mmap.rs
src/loader/dso/mmap/: dummy.rs  mmap.rs  mod.rs  no_mmap.rs
src/loader/dso/segment/: mmap.rs  mod.rs  no_mmap.rs
src/loader/ehframe/: dummy.rs  libgcc.rs  libunwind.rs  mod.rs  unwinding.rs
src/loader/mmap/: dummy.rs  mmap.rs  mod.rs  no_mmap.rs
tests/: all.rs  c-dlopen.rs  rust-dlopen.rs
