[package]
name = "dlopen-rs"
version = "0.3.1"
edition = "2021"
authors = ["wzhao <1207410841@qq.com>"]
readme = "README.md"
repository = "https://github.com/weizhiao/dlopen-rs"
keywords = ["dlopen", "elf", "unix", "loader"]
categories = ["no-std", "os", "embedded"]
license = "Apache-2.0"
description = "A library for loading elf dynamic libraries from memory and files"
exclude = [".gitignore", "/test", "/example-dylib", "check.sh"]

[workspace]
members = ["example-dylib"]
resolver = "2"

[dependencies.spin]
version = "0.9.8"
default-features = false
features = ["rwlock"]
optional = true

[dependencies.unwinding]
version = "0.2.3"
default-features = false
features = ["fde-custom", "unwinder"]
optional = true

[dependencies.gimli]
version = "0.30"
default-features = false
features = ["read-core"]
optional = true

[dependencies.hashbrown]
version = '0.14'
default-features = false
features = ['ahash', 'inline-more']

[dependencies.nix]
version = '0.29'
default-features = false
features = ['mman']
optional = true

[dependencies.phf]
version = '0.11'
default-features = false
features = ['macros']

[dependencies]
bitflags = "2.6.0"
cfg-if = '1.0'
elf_loader = { git = "https://github.com/weizhiao/elf_loader.git", default-features = false }

[features]
default = ["tls", "ldso", "libgcc", "mmap"]

# allows dynamic libraries to be loaded using system dynamic loaders(ldso)
ldso = ["std", "dep:nix"]
# enable this when you want to use gdb/lldb to debug the loaded dynamic libraries
debug = ["std"]
# enable std
std = ["dep:nix", "elf_loader/std"]
# enable default implementation on devices with mmap
mmap = ["dep:nix", "std", "elf_loader/mmap"]
# enable this when you need to use thread local storage
tls = ["std", "dep:nix", "elf_loader/tls"]
# activate specific versions of symbols for dynamic library loading
version = ["elf_loader/version"]
# enable this when you want to use the exception handling mechanism provided by dlopen-rs
unwinding = ["dep:unwinding", "dep:spin"]
# enable this when program uses libgcc to handle exceptions
libgcc = ["dep:gimli"]
# enable this when program uses libunwind to handle exceptions
libunwind = ["dep:gimli"]
# see https://github.com/nbdd0121/unwinding/#unwinder
fde-phdr-dl = ["unwinding?/fde-phdr-dl"]
# see https://github.com/nbdd0121/unwinding/#baremetal
fde-static = ["unwinding?/fde-static"]
# see https://github.com/nbdd0121/unwinding/#baremetal
fde-gnu-eh-frame-hdr = ["unwinding?/fde-gnu-eh-frame-hdr"]

[dev-dependencies]
criterion = "0.5.1"
libloading = "0.8.5"

[[bench]]
name = "my_benchmark"
harness = false

[[example]]
name = "from_file"
required-features = ["ldso", "tls", "libgcc"]

[[example]]
name = "from_binary"
required-features = ["ldso", "libgcc", "tls"]

[[example]]
name = "relocate_with"
required-features = ["std", "tls", "libgcc"]

[[example]]
name = "unwinding"
required-features = ["tls", "unwinding", "ldso", "fde-phdr-dl"]

[[example]]
name = "dlopen"
required-features = ["ldso", "libgcc", "tls"]
