[package]
name = "dlopen-rs"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dev-dependencies]
libloading = "0.8.0"

[dependencies.spin]
version = "0.9.8"
default-features = false
features = ["rwlock"]
optional = true

[dependencies.unwinding]
version = "0.2.1"
default-features = false
features = ["fde-custom", "unwinder"]
optional = true

[dependencies.gimli]
version = "0.30"
default-features = false
features = ["read-core"]
optional = true

[dependencies.hashbrown]
version = '0.14'
default-features = false
features = ['ahash', 'inline-more']

[dependencies.snafu]
version = '0.8'
default-features = false
features = ['rust_1_61', 'unstable-core-error']

[dependencies.nix]
version = '0.29'
default-features = false
features = ['mman']
optional = true

[dependencies.phf]
version = '0.11'
default-features = false
features = ['macros']

[dependencies.elf]
version = "0.7.4"
default-features = false

[features]
default = ["libgcc", "load_self", "tls"]

# enable load the dso of the program itself
load_self = ["mmap"]
# enable std
std = []
# enable this on platforms that support mmap
mmap = ["dep:nix", "std"]
# enable thread local storage
tls = []
nightly = []
# enable this when you want to use the exception handling mechanism provided by dlopen-rs
unwinding = ["dep:unwinding", "dep:spin"]
# enable this when program uses libgcc to handle exceptions
libgcc = ["dep:gimli"]
# enable this when program uses libunwind to handle exceptions
libunwind = ["dep:gimli"]
# see https://github.com/nbdd0121/unwinding/#unwinder
fde-phdr-dl = ["unwinding?/fde-phdr-dl"]
# see https://github.com/nbdd0121/unwinding/#baremetal
fde-static = ["unwinding?/fde-static"]
# see https://github.com/nbdd0121/unwinding/#baremetal
fde-gnu-eh-frame-hdr = ["unwinding?/fde-gnu-eh-frame-hdr"]

[[example]]
name = "load_self"
required-features = ["load_self", "libgcc", "tls"]

[[example]]
name = "from_binary"
required-features = ["load_self", "libgcc", "tls"]

[[example]]
name = "relocate_with"
required-features = ["mmap", "tls", "libgcc"]

[[example]]
name = "unwinding"
required-features = ["mmap", "tls", "unwinding", "load_self", "fde-phdr-dl"]
